--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coming soon</title>
+    <link rel="shortcut icon" href="./favicon.png" type="image/png">
     <!-- reset/init -->
     <link rel="stylesheet" href="./css/variables.css">
     <link rel="stylesheet" href="./css/reset.css">
@@ -12,6 +13,7 @@
     <!-- 3rd party css -->
     <link rel="stylesheet" href="./css/font-awesome.min.css">
     <!-- component -->
+    <link rel="stylesheet" href="./css/button.css">
     <link rel="stylesheet" href="./css/clock.css">
     <link rel="stylesheet" href="./css/form.css">
     <link rel="stylesheet" href="./css/mouse.css">
@@ -26,14 +28,14 @@
             <img src="./img/coming-soon-logo.png" alt="Logo">
             <h1>Coming soon</h1>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse quisquam fugiat facilis asperiores, quo harum?</p>
-            <div class="clock">
-                CLOCK
-            </div>
+            <div class="clock"></div>
             <form class="form">
-                SUBSCRIBE FORM
+                <input type="email" placeholder="Email" required>
+                <!-- <input type="submit" value="Subscribe now!"> -->
+                <div class="btn">Subscribe now!</div>
             </form>
             <div class="mouse">
-                MOUSE
+                <div class="wheel"></div>
             </div>
         </div>
     </div>
@@ -42,34 +44,23 @@
             <div class="column left">
                 <h2>About startup</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus impedit temporibus labore, <a href="#">Matrox</a> veniam tenetur ea quaerat cumque dolor distinctio.</p>
-                <div class="progress-bar">
-                    PROGRESS BAR
-                </div>
-                <div class="progress-bar">
-                    PROGRESS BAR
-                </div>
-                <div class="progress-bar">
-                    PROGRESS BAR
-                </div>
             </div>
             <div class="column right">
                 <h2>Have any question?</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia explicabo doloribus quisquam <a href="mailto:vardenis@pastelis.xyz">vardenis@pastelis.xyz</a> natus autem dolorem. Eaque, molestias assumenda.</p>
                 <form class="form">
-                    MESSAGE FORM
+                    <input type="text" placeholder="Name">
+                    <input type="email" placeholder="Email" required>
+                    <textarea maxlength="1000" placeholder="Message" required></textarea>
+                    <!-- <input type="submit" value="Send message"> -->
+                    <div class="btn">Send message</div>
                 </form>
             </div>
         </div>
     </main>
     <footer class="container bg-main-color">
         <div class="row">
-            <a href="#" target="_blank" class="fa fa-facebook" aria-hidden="true"></a>
-            <a href="#" target="_blank" class="fa fa-twitter" aria-hidden="true"></a>
-            <a href="#" target="_blank" class="fa fa-dribbble" aria-hidden="true"></a>
-            <a href="#" target="_blank" class="fa fa-tumblr" aria-hidden="true"></a>
-            <a href="#" target="_blank" class="fa fa-linkedin" aria-hidden="true"></a>
-            <a href="#" target="_blank" class="fa fa-instagram" aria-hidden="true"></a>
-            <a href="#" target="_blank" class="fa fa-rss" aria-hidden="true"></a>
+            <a href="#" class="btn btn-secondary-color circle fa fa-angle-up"></a>
         </div>
         <div class="row-short">
             <img src="./img/logo-footer.png" alt="matrox logo">
